<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_et"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_et"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_keep_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:buttonTint="@color/blue"
                android:text="@string/keep_username"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/check_update"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawablePadding="5dp"
                android:text="@string/check_update"
                android:textColor="@color/blue"
                app:drawableStartCompat="@drawable/ic_check_update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/blue"
        android:paddingVertical="15dp"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textSize="16sp"
        android:translationZ="10dp"
        app:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@id/ll_login"
        app:layout_constraintStart_toStartOf="@id/ll_login"
        app:layout_constraintTop_toBottomOf="@id/ll_login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/app_ver"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>