<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="10dp"
    android:paddingHorizontal="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Kunjungan pada bulan Agustus 2020"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:text="@string/_150"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginHorizontal="10dp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_total_store" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:text="@string/_150"
                android:gravity="center"
                android:layout_marginHorizontal="10dp"
                android:textSize="30sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_actual_store" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginHorizontal="10dp"
                android:text="@string/_50"
                android:textSize="30sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_percentage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/total_store"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/actual_store"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:gravity="center"
                android:text="@string/percentage"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>